--- a/jenkins/jenkinsfile
+++ b/jenkins/jenkinsfile
@@ -11,7 +11,7 @@ pipeline {
             }
             steps {
                 dir('bugtracker-backend') {
-                    sh 'go test -v ./...'
+                    sh 'GOCACHE=$WORKSPACE/.go-cache go test -v ./...'
                 }
             }
         }
