--- a/jenkins/jenkinsfile
+++ b/jenkins/jenkinsfile
@@ -3,15 +3,15 @@ pipeline {
 
     stages {
         stage('Unit Tests - Backend') {
-            agent {
+/*             agent {
                 docker {
                     image 'snakee/golang-junit:1.21'
                     reuseNode true
                 }
-            }
+            } */
             steps {
                 dir('bugtracker-backend') {
-                    sh 'GOCACHE=$WORKSPACE/.go-cache go test -v ./...'
+                    sh 'go test -v ./...'
                 }
             }
         }
