removed teh sh go version and put it below, hoping this will make the build work

--- a/jenkins/jenkinsfile
+++ b/jenkins/jenkinsfile
@@ -10,10 +10,10 @@ pipeline {
                 }
             } */
             steps {
-                sh 'go version'
                 dir('bugtracker-backend') {
                     sh 'go test -v ./...'
                 }
+                /* sh 'go version' */
             }
         }
     }
