installed go globally on jenkins, and updated the name to match the name. fingers crossed. permissions is the actual issue perhaps.

--- a/jenkins/jenkinsfile
+++ b/jenkins/jenkinsfile
@@ -1,6 +1,8 @@
 pipeline {
     agent any
-    tools { go '1.19'}
+    tools { 
+        go 'go-installation'
+        }
     stages {
         stage('Unit Tests - Backend') {
 /*             agent {
