--- a/jenkins/jenkinsfile
+++ b/jenkins/jenkinsfile
@@ -20,7 +20,7 @@ pipeline {
         stage('Unit Tests - Frontend') {
             agent {
                 docker {
-                    image: 'node:20-alpine'
+                    image 'node:20-alpine'
                     reuseNode true
                 }
             }
