--- a/jenkins/jenkinsfile
+++ b/jenkins/jenkinsfile
@@ -4,34 +4,38 @@ pipeline {
         go 'go-installation'
         }
     stages {
-        stage('Unit Tests - Backend') {
-            // agent {
-            //     docker {
-            //         image 'snakee/golang-junit:1.21'
-            //         reuseNode true
-            //     }
-            // }
-            steps {
-                dir('bugtracker-backend') {
-                    sh 'go test -v ./...'
-                }
+        stage ('Execute Unit Tests') {
+            parallel {
+                stage('Unit Tests - Backend') {
+                    steps {
+                        dir('bugtracker-backend') {
+                        sh 'go test -v ./...'
+                        }
+                    }
+                    }
+                stage('Unit Tests - Frontend') {
+                    agent {
+                        docker {
+                            image 'node:20-alpine'
+                            reuseNode true
+                        }
+                    }
+                    steps {
+                        dir('bugtracker-frontend') {
+                            sh '''
+                                npm ci
+                                npm test
+                            '''
+                        }
+                    }
+                    post {
+                        always {
+                            junit 'bugtracker-frontend/test-results.xml'
+                        }
+                    }
+                } 
             }
         }
-        stage('Unit Tests - Frontend') {
-            agent {
-                docker {
-                    image 'node:20-alpine'
-                    reuseNode true
-                }
-            }
-            steps {
-                dir('bugtracker-frontend') {
-                    sh '''
-                        npm ci
-                        npm test
-                    '''
-                }
-            }
-        }      
+     
     }
 }
