--- a/jenkins/jenkinsfile
+++ b/jenkins/jenkinsfile
@@ -57,11 +57,11 @@ pipeline {
                 }
             }
             steps {
-                dir('tests-api')
-                sh 'npx wait-port http://localhost:8080/api/health -t 30000'
-
-                sh 'npm ci'
-                sh 'npx playwright test'
+                dir('tests-api') {
+                    sh 'npx wait-port http://localhost:8080/api/health -t 30000'
+                    sh 'npm ci'
+                    sh 'npx playwright test'
+                }
             }
         }
     }
