--- a/jenkins/jenkinsfile
+++ b/jenkins/jenkinsfile
@@ -64,6 +64,21 @@ pipeline {
                 }
             }
         }
+        stage('E2E Tests') {
+            agent {
+                docker {
+                    image 'mcr.microsoft.com/playwright:v1.50.0-jammy'
+                    reuseNode true
+                    args '-u 0 --network=host'
+                }
+            }
+            steps {
+                dir('tests-e2e') {
+                    sh 'npm ci'
+                    sh 'npx playwright test'
+                }
+            }            
+        }
         post {
             always {
                 junit 'tests-api/test-results/results.xml'
