--- a/jenkins/jenkinsfile
+++ b/jenkins/jenkinsfile
@@ -83,11 +83,11 @@ pipeline {
     post {
         always {
             junit 'tests-api/test-results/results.xml'
-            publishHTML target: {
+            publishHTML([
                 reportDir: 'tests-api/playwright-report'
                 reportFiles: 'index.html'
                 reportName: 'Playwright API Test Report'
-            }
+            ])
             cleanWs()
         }
     }
