--- a/jenkins/jenkinsfile
+++ b/jenkins/jenkinsfile
@@ -87,6 +87,9 @@ pipeline {
                 reportDir: 'tests-api/playwright-report',
                 reportFiles: 'index.html',
                 reportName: 'Playwright API Test Report'
+                keepAll: true,
+                alwaysLinkToLastBuild: true,
+                allowMissing: false
             ])
             cleanWs()
         }
