--- a/jenkins/jenkinsfile
+++ b/jenkins/jenkinsfile
@@ -77,6 +77,16 @@ pipeline {
                     sh 'npm ci'
                     sh 'npx playwright test'
                 }
+            }
+            post {
+                always {
+                    junit 'tests-e2e/test-results/results.xml'
+                    publishHTML target: [
+                        reportDir: 'tests-e2e/playwright-report',
+                        reportfiles: 'index.html',
+                        reportName: 'Playwright E2E Tests Report'
+                    ]
+                }
             }            
         }
     }  
