--- a/jenkins/jenkinsfile
+++ b/jenkins/jenkinsfile
@@ -83,7 +83,7 @@ pipeline {
                     junit 'tests-e2e/test-results/results.xml'
                     publishHTML target: [
                         reportDir: 'tests-e2e/playwright-report',
-                        reportfiles: 'index.html',
+                        reportFiles: 'index.html',
                         reportName: 'Playwright E2E Tests Report'
                     ]
                 }
