--- a/jenkins/jenkinsfile
+++ b/jenkins/jenkinsfile
@@ -2,7 +2,7 @@ pipeline {
     agent any
     tools { 
         go 'go-installation'
-        }
+    }
     stages {
         stage ('Execute Unit Tests') {
             parallel {
@@ -89,7 +89,21 @@ pipeline {
                 }
             }            
         }
-    }  
+        stage('Performance Tests') {
+            agent {
+                docker {
+                    image 'grafana/k6:latest'
+                    reuseNode true
+                    args '--network=host -u root --entrypoint=""'
+                }
+            }
+            steps {
+                dir('test-perf') {
+                    sh 'k6 run script.js'
+                }
+            }
+        }  
+    }
     post {
         always {
             junit 'tests-api/test-results/results.xml'
