--- a/jenkins/jenkinsfile
+++ b/jenkins/jenkinsfile
@@ -102,6 +102,15 @@ pipeline {
                     sh 'k6 run script.js'
                 }
             }
+            post {
+                always {
+                    publishHTML target: [
+                        reportDir: 'tests-perf',
+                        reportFiles: 'perf-results.html',
+                        reportName: 'Performance Test Results'
+                    ]
+                }
+            }
         }  
     }
     post {
