--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,7 +3,10 @@ name: CI
 on: 
     push:
         branches: 
-            - main
+          - main
+    pull_request:
+        branches: 
+          - main
     workflow_dispatch:
 
 jobs:
