--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -86,6 +86,7 @@ jobs:
                 reporter: jest-junit
     create-coverage-comment: 
         if: github.event_name == 'pull_request'
+        needs: [unit-tests-backend]
         runs-on: ubuntu-latest
         permissions:
             pull-requests: write
