--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -114,4 +114,18 @@ jobs:
                   ```
                   ${{ needs.unit-tests-frontend.outputs.coverage }}
                   ```
-        
+    
+                  
+
+    api-tests:
+        needs: [unit-tests-backend, unit-tests-frontend]
+        runs-on: ubuntu-latest
+
+        steps:
+            - name: Checkout repository
+              uses: actions/checkoutv@4
+
+            - name: Launch application
+              run: |
+                docker compose up --build -d
+                npx wait-port http://localhost:8080/api/healthcheck -t 30000
